--- a/css/main.css
+++ b/css/main.css
@@ -277,11 +277,11 @@ li,ul,body,input{
 }
 
 body{
-	background-color: #f4f2f5;
+	background-color: #fff;
 }
 
 body::after{				/* Body background */
-	background-image: url("../images/bg6.png");
+	background-image: url("../images/");
 	content: "";
 	opacity: 0.07;
 	top: 0;
