--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Open Sans", sans-serif;
-  color: #3e454c;
+  color: blue;
   background-color: #ffffff;
 }
 body::after {
@@ -90,8 +90,8 @@ Header
   left: 0;
   height: 45px;
   width: 100%;
-  background: #3e454c;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  background: #62bbf7;
+  box-shadow: 0 1px 3px maroon;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -181,7 +181,7 @@ Header
 }
 .cd-nav-trigger.nav-is-visible span {
   /* hide line in the center */
-  background: rgba(255, 255, 255, 0);
+  background: #2e86c1;
 }
 .cd-nav-trigger.nav-is-visible span::before, .cd-nav-trigger.nav-is-visible span::after {
   /* keep visible other 2 lines */
@@ -269,21 +269,21 @@ Header
     border: none;
     padding-left: 2.6em;
     border-radius: 0;
-    background-color: #3e454c;
-    border-left: 1px solid #51575d;
+    background-color: #2e86c1;
+    border-left: 1px solid #fff;
     color: #ffffff;
   }
   .cd-search input::-webkit-input-placeholder {
-    color: #777c81;
+    color: maroon;
   }
   .cd-search input::-moz-placeholder {
-    color: #777c81;
+    color: maroon;
   }
   .cd-search input:-moz-placeholder {
-    color: #777c81;
+    color: maroon;
   }
   .cd-search input:-ms-input-placeholder {
-    color: #777c81;
+    color: maroon;
   }
 }
 
@@ -369,7 +369,7 @@ Sidebar
   top: 0;
   width: 100%;
   padding: 45px 0 0;
-  background-color: #2c3136;
+  background-color: #2e86c1;
   visibility: hidden;
   opacity: 0;
   max-height: 100vh;
@@ -382,7 +382,7 @@ Sidebar
 }
 .cd-side-nav.nav-is-visible {
   height: 900px;
-  opacity: 1;
+  opacity: 2;
   visibility: visible;
   overflow: visible;
   -webkit-overflow-scrolling: touch;
@@ -708,11 +708,11 @@ Sidebar
   }
   .cd-side-nav .has-children.selected > a {
     /* focus state -> show sub pages */
-    background-color: #33383e;
+    background-color: #2e86c1;
   }
   .cd-top-nav .has-children {
     position: relative;
-    background-color: #2c3136;
+    background-color: #2e86c1;
   }
   .cd-top-nav .has-children > a {
     height: 100%;
@@ -724,7 +724,7 @@ Sidebar
     right: 1.8em;
   }
   .cd-top-nav .has-children ul {
-    background-color: #1c1f22;
+    background-color: #2e86c1;
     width: 200px;
     top: 100%;
     right: 0;
